--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 
     <section id="features">
-        <div class="container d-flex">
+        <div class="container  d-block d-lg-flex text-center">
            
             <div class="container-fluid">
                 <h1 class="text-light">870</h1>
